# plan-it

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.codebuddy/skills/plan-it/templates/: annotated-pr.html  implementation-plan.html  three-approaches.html  weekly-status.html
.codex/skills/plan-it/scripts/: bump-version.py  init-plan.sh  render-plan.ps1  session-catchup.py
.continue/skills/plan-it/scripts/: plan-hook.py
.continue/skills/plan-it/templates/: animation-sandbox.html
.pi/skills/plan-it/: SKILL.md
clawhub-upload/templates/: annotated-pr.html  feature-flag-editor.html  ticket-triage.html
commands/: plan-attest.md  plan-export.md  plan-goal.md  plan-loop.md  plan-render.md  plan-status.md  plan.md
docs/: anti-slop.md  installation.md  launch-comms.md  quickstart.md  windows.md
docs/specs/: 2026-05-19-plan-it-design.md
examples/: README.md  demo-plan.attestation  demo-plan.html
skills/plan-it/: SKILL.md
skills/plan-it/scripts/: attest-plan.ps1
skills/plan-it/templates/: annotated-pr.html  implementation-plan.html
templates/: loop.md  ticket-triage.html
tests/: conftest.py  test_a11y.py  test_bump_version.py  test_canonical_script_sync.py  test_commands.py  test_export_markdown.py  test_init_plan.py  test_plan_hook.py  test_save_handler.py  test_security.py  test_session_catchup.py  test_skill_frontmatter.py  test_templates_render.py
(+24 files in other folders)
